compiler/testData/diagnostics/tests/overload/ConflictingOverloadsValsDifferentTypeInClass.kt
// FIR_IDENTICAL
class Aaa() {
    konst <!REDECLARATION!>a<!> = 1
    konst <!REDECLARATION!>a<!> = ""
}